@@ -1,0 +1,29 @@
+<html >
+<head>
+<script language="Javascript" src="./test.js"></script> 
+<script language="JavaScript">
+<!--
+
+//	function commented_function1 () {}
+/* 
+	function commented_function2 () {} 
+*/
+
+function message()
+{
+      alert( "Hello.");     
+}
+
+//-->
+</script>
+<body>
+  <a name="simple_anchor"></a>
+  <a name=unquoted_anchor></a>
+  <a title="Title" name="prefixed_anchor"></a>
+  <a name=postfixed_anchor href="http://darrenhiebert.com"></a>
+  <!-- <a name="commented_anchor"></a> -->
+</body>
+</html>
+
+
+
